alignment fix

--- a/instagram/src/App.scss
+++ b/instagram/src/App.scss
@@ -7,6 +7,10 @@
     align-items: center;
     margin: 0 auto;
 
+    .load {
+        margin: 200px auto 0;
+    }
+
     header {
         width: 100%;
         height: 60px;
