--- a/instagram/src/index.scss
+++ b/instagram/src/index.scss
@@ -11,11 +11,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: #00000050;
-    text-align: center;
-}
-
-.react-spinner-loader-svg {
-    margin-top: 200px;
 }
 
 code {
